--- a/app/src/main/res/layout/activity_gelismis_uygulama_ayarlari.xml
+++ b/app/src/main/res/layout/activity_gelismis_uygulama_ayarlari.xml
@@ -189,9 +189,9 @@
         android:id="@+id/diagnostikbtn"
         android:layout_width="37dp"
         android:layout_height="50dp"
-        android:layout_marginStart="140dp"
-        android:layout_marginTop="36dp"
-        app:layout_constraintStart_toEndOf="@+id/linearLayout20"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="90dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView29"
         app:srcCompat="@drawable/bluetooth" />
 
@@ -199,45 +199,46 @@
         android:id="@+id/textView24"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_marginStart="20dp"
         android:fontFamily="@font/poppinsbold"
         android:gravity="center|start"
         android:text="478208"
         android:textColor="@color/white"
         android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@+id/linearLayout19"
+        app:layout_constraintEnd_toStartOf="@+id/imageView29"
         app:layout_constraintTop_toTopOf="@+id/linearLayout19" />
 
     <ImageView
         android:id="@+id/imageView29"
         android:layout_width="37dp"
         android:layout_height="50dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="32dp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout20"
-        app:layout_constraintStart_toEndOf="@+id/textView24"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="90dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView17"
         app:srcCompat="@drawable/bluetooth" />
 
     <TextView
         android:id="@+id/textView27"
         android:layout_width="37dp"
         android:layout_height="50dp"
-        android:layout_marginStart="104dp"
         android:layout_marginTop="32dp"
+        android:layout_marginEnd="90dp"
         android:layout_weight="1"
         android:fontFamily="@font/poppinsbold"
         android:gravity="center"
         android:text="2A"
         android:textColor="@color/white"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/linearLayout21"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/diagnostikbtn" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar2"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="60dp"
         android:layout_marginTop="76dp"
+        android:layout_marginEnd="8dp"
         android:background="@android:color/transparent"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
@@ -246,7 +247,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/switch4"
         app:navigationIcon="@drawable/back"
-        app:title="KULLANICI AYARLARINA GERİ GÖN" />
+        app:title="@string/kullanici_ayar" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
