--- a/app/src/main/res/layout/fragment_enerji.xml
+++ b/app/src/main/res/layout/fragment_enerji.xml
@@ -83,6 +83,7 @@
         android:layout_height="24dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/poppinsbold"
+        android:gravity="center"
         android:text="@string/aku_gerilimi"
         android:textColor="@color/white"
         android:textSize="16sp"
