--- a/app/src/main/res/layout/fragment_gostergeler.xml
+++ b/app/src/main/res/layout/fragment_gostergeler.xml
@@ -84,53 +84,56 @@
         android:text="@string/sicaklik_ve_nem"
         android:textColor="@color/white"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/linearLayout24"
-        app:layout_constraintHorizontal_bias="0.479"
-        app:layout_constraintStart_toStartOf="@+id/linearLayout18"
+        app:layout_constraintEnd_toEndOf="@+id/imageView55"
+        app:layout_constraintStart_toStartOf="@+id/imageView55"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView55"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="24dp"
         android:src="@drawable/termometre"
-        app:layout_constraintStart_toEndOf="@+id/linearLayout18"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.471"
+        app:layout_constraintStart_toEndOf="@+id/imageView50"
         app:layout_constraintTop_toBottomOf="@+id/textView60" />
 
     <TextView
         android:id="@+id/textView61"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="16dp"
         android:text="@string/ic_sicaklik"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout18"
-        app:layout_constraintEnd_toEndOf="@+id/linearLayout18"
-        app:layout_constraintHorizontal_bias="0.487"
-        app:layout_constraintStart_toStartOf="@+id/linearLayout18" />
+        app:layout_constraintEnd_toStartOf="@+id/imageView55"
+        app:layout_constraintStart_toEndOf="@+id/imageView50" />
 
     <TextView
         android:id="@+id/textView62"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
         android:text="@string/diss_sicaklik"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout24"
-        app:layout_constraintEnd_toEndOf="@+id/linearLayout24"
-        app:layout_constraintStart_toStartOf="@+id/linearLayout24" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView55" />
 
     <LinearLayout
         android:id="@+id/linearLayout18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
         android:layout_marginTop="32dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="@+id/imageView55"
-        app:layout_constraintStart_toEndOf="@+id/imageView50"
+        app:layout_constraintEnd_toEndOf="@+id/textView61"
+        app:layout_constraintStart_toStartOf="@+id/textView61"
         app:layout_constraintTop_toTopOf="@+id/imageView55">
 
         <TextView
@@ -142,7 +145,7 @@
             android:gravity="end"
             android:text="24"
             android:textColor="@color/white"
-            android:textSize="54sp" />
+            android:textSize="48sp" />
 
         <TextView
             android:id="@+id/textView73"
@@ -152,18 +155,18 @@
             android:fontFamily="@font/poppinsextralight"
             android:text="°C"
             android:textColor="@color/white"
-            android:textSize="54sp" />
+            android:textSize="48sp" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout24"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="@+id/imageView55"
-        app:layout_constraintStart_toEndOf="@+id/imageView55"
+        app:layout_constraintEnd_toEndOf="@+id/textView62"
+        app:layout_constraintStart_toStartOf="@+id/textView62"
         app:layout_constraintTop_toTopOf="@+id/imageView55">
 
         <TextView
@@ -175,7 +178,7 @@
             android:gravity="center|end"
             android:text="38"
             android:textColor="@color/white"
-            android:textSize="54sp" />
+            android:textSize="48sp" />
 
         <TextView
             android:id="@+id/textView75"
@@ -185,7 +188,7 @@
             android:fontFamily="@font/poppinsextralight"
             android:text="°C"
             android:textColor="@color/white"
-            android:textSize="54sp" />
+            android:textSize="48sp" />
     </LinearLayout>
 
     <TextView
@@ -196,9 +199,8 @@
         android:text="@string/ic_nem"
         android:textColor="@color/white"
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@+id/linearLayout24"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="@+id/linearLayout18"
+        app:layout_constraintEnd_toEndOf="@+id/imageView55"
+        app:layout_constraintStart_toStartOf="@+id/imageView55"
         app:layout_constraintTop_toBottomOf="@+id/imageView55" />
 
     <ImageView
