--- a/app/src/main/res/layout/activity_gelismis_uygulama_ayarlari.xml
+++ b/app/src/main/res/layout/activity_gelismis_uygulama_ayarlari.xml
@@ -129,10 +129,11 @@
 
         <TextView
             android:id="@+id/textView23"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fontFamily="@font/poppinsbold"
             android:gravity="center|start"
+            android:text="@string/bluetootheslestirme"
             android:textColor="@color/white"
             android:textSize="20sp" />
 
