--- a/app/src/main/res/layout/activity_gelismis_uygulama_ayarlari.xml
+++ b/app/src/main/res/layout/activity_gelismis_uygulama_ayarlari.xml
@@ -38,9 +38,8 @@
         android:id="@+id/imageView28"
         android:layout_width="wrap_content"
         android:layout_height="250dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="@+id/imageView27"
-        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="@+id/imageView27"
         app:layout_constraintTop_toBottomOf="@+id/textView17"
         app:srcCompat="@drawable/line" />
@@ -49,7 +48,7 @@
         android:id="@+id/bluetooth"
         android:layout_width="320dp"
         android:layout_height="50dp"
-        android:layout_marginStart="90dp"
+        android:layout_marginStart="70dp"
         android:layout_marginTop="32dp"
         android:checked="false"
         android:fontFamily="@font/poppinsbold"
@@ -66,7 +65,7 @@
         android:id="@+id/switch2"
         android:layout_width="320dp"
         android:layout_height="50dp"
-        android:layout_marginStart="90dp"
+        android:layout_marginStart="70dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/poppinsbold"
         android:text="@string/kirlisugostergesi"
@@ -82,7 +81,7 @@
         android:id="@+id/switch4"
         android:layout_width="320dp"
         android:layout_height="50dp"
-        android:layout_marginStart="90dp"
+        android:layout_marginStart="70dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/poppinsbold"
         android:text="@string/denge_sistemi"
@@ -98,7 +97,7 @@
         android:id="@+id/button"
         android:layout_width="148dp"
         android:layout_height="50dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/ayargirisbtn"
         android:fontFamily="@font/poppinsbold"
         android:text="@string/kaydett"
@@ -122,7 +121,7 @@
         android:id="@+id/linearLayout19"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_marginStart="60dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="32dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toEndOf="@+id/imageView28"
@@ -144,7 +143,7 @@
         android:id="@+id/linearLayout20"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_marginStart="60dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="32dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toEndOf="@+id/imageView28"
@@ -167,7 +166,7 @@
         android:id="@+id/linearLayout21"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_marginStart="60dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="32dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toEndOf="@+id/imageView28"
@@ -200,14 +199,14 @@
         android:id="@+id/eslesmetext"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_marginEnd="8dp"
         android:fontFamily="@font/poppinsbold"
         android:gravity="center|start"
-        android:text="478208"
         android:textColor="@color/white"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/eslesmebtn"
-        app:layout_constraintTop_toTopOf="@+id/linearLayout19" />
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout20"
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout19"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout19"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout19" />
 
     <ImageView
         android:id="@+id/eslesmebtn"
@@ -239,7 +238,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="45dp"
         android:layout_marginEnd="8dp"
         android:background="@android:color/transparent"
         android:minHeight="?attr/actionBarSize"
