--- a/app/src/main/res/layout/fragment_anasayfa.xml
+++ b/app/src/main/res/layout/fragment_anasayfa.xml
@@ -53,10 +53,10 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/poppinsthin"
-        android:gravity="center"
+        android:gravity="center|right"
         android:text="22"
         android:textColor="@color/white"
-        android:textSize="100dp"
+        android:textSize="80sp"
         app:layout_constraintEnd_toStartOf="@+id/textView34"
         app:layout_constraintTop_toBottomOf="@+id/gun" />
 
@@ -65,7 +65,7 @@
         android:id="@+id/imageView32"
         android:layout_width="220dp"
         android:layout_height="170dp"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="90dp"
         android:layout_marginTop="16dp"
         android:src="@drawable/akuicon"
         app:layout_constraintStart_toStartOf="parent"
@@ -86,7 +86,7 @@
         android:layout_width="220dp"
         android:layout_height="170dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="100dp"
+        android:layout_marginEnd="90dp"
         android:src="@drawable/akuicon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView43" />
@@ -120,7 +120,7 @@
         android:id="@+id/textView48"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:fontFamily="@font/poppinsbold"
         android:text="@string/atik_su"
         android:textColor="@color/white"
@@ -133,9 +133,10 @@
         android:id="@+id/imageView45"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="28dp"
         android:src="@drawable/termometre"
         app:layout_constraintEnd_toEndOf="@+id/guntext"
+        app:layout_constraintHorizontal_bias="0.425"
         app:layout_constraintStart_toStartOf="@+id/guntext"
         app:layout_constraintTop_toBottomOf="@+id/guntext" />
 
@@ -143,7 +144,7 @@
         android:id="@+id/textView49"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="45dp"
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/poppinsbold"
         android:gravity="center|end"
@@ -158,7 +159,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="45dp"
         android:fontFamily="@font/poppinsbold"
         android:gravity="center|start"
         android:text="@string/dis_sicaklik"
@@ -171,11 +172,11 @@
         android:id="@+id/imageView46"
         android:layout_width="448dp"
         android:layout_height="100dp"
+        android:layout_marginBottom="4dp"
         android:src="@drawable/huntercunter"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.487"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="@+id/imageView45"
+        app:layout_constraintStart_toStartOf="@+id/imageView45" />
 
     <ImageView
         android:id="@+id/temizsudolum"
@@ -404,10 +405,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:fontFamily="@font/poppinsthin"
-        android:gravity="center"
+        android:gravity="center|left"
         android:text="59"
         android:textColor="@color/white"
-        android:textSize="100dp"
+        android:textSize="80dp"
         app:layout_constraintStart_toEndOf="@+id/textView34"
         app:layout_constraintTop_toBottomOf="@+id/gun" />
 
