--- a/app/src/main/res/layout/activity_kullanici_uygulama_ayarlari.xml
+++ b/app/src/main/res/layout/activity_kullanici_uygulama_ayarlari.xml
@@ -323,11 +323,11 @@
         android:text="98%"
         android:textColor="@color/white"
         android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView41"
+        app:layout_constraintEnd_toStartOf="@+id/humidty_set_button"
         app:layout_constraintTop_toBottomOf="@+id/sleepmode" />
 
     <ImageView
-        android:id="@+id/imageView41"
+        android:id="@+id/humidty_set_button"
         android:layout_width="49dp"
         android:layout_height="37dp"
         android:layout_marginTop="32dp"
@@ -343,7 +343,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="100dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView41"
+        app:layout_constraintTop_toBottomOf="@+id/humidty_set_button"
         app:srcCompat="@drawable/kirmiziayar" />
 
     <TextView
