gelismis ayarlar switch update

--- a/app/src/main/res/layout/fragment_anasayfa.xml
+++ b/app/src/main/res/layout/fragment_anasayfa.xml
@@ -2,11 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layoutscreen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.AnasayfaFragment"
 
-    >
+    tools:context=".fragments.AnasayfaFragment">
 
     <TextView
         android:id="@+id/textView42"
@@ -249,7 +249,7 @@
             android:src="@drawable/sudamlasi" />
 
         <TextView
-            android:id="@+id/textView63"
+            android:id="@+id/atiksuanasayfa"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginStart="9dp"
