--- a/app/src/main/res/layout/activity_gelismis_uygulama_ayarlari.xml
+++ b/app/src/main/res/layout/activity_gelismis_uygulama_ayarlari.xml
@@ -62,7 +62,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView17" />
 
     <Switch
-        android:id="@+id/switch2"
+        android:id="@+id/kirlisugostergesiswitch"
         android:layout_width="320dp"
         android:layout_height="50dp"
         android:layout_marginStart="70dp"
@@ -78,7 +78,7 @@
         app:layout_constraintTop_toBottomOf="@+id/bluetooth" />
 
     <Switch
-        android:id="@+id/switch4"
+        android:id="@+id/dengesistemiswitch"
         android:layout_width="320dp"
         android:layout_height="50dp"
         android:layout_marginStart="70dp"
@@ -91,7 +91,7 @@
         android:track="@drawable/kompresorswitch"
         app:layout_constraintEnd_toStartOf="@+id/imageView28"
         app:layout_constraintStart_toStartOf="@+id/imageView27"
-        app:layout_constraintTop_toBottomOf="@+id/switch2" />
+        app:layout_constraintTop_toBottomOf="@+id/kirlisugostergesiswitch" />
 
     <Button
         android:id="@+id/button"
@@ -246,7 +246,7 @@
         app:layout_constraintEnd_toStartOf="@+id/button"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/switch4"
+        app:layout_constraintTop_toBottomOf="@+id/dengesistemiswitch"
         app:navigationIcon="@drawable/back"
         app:title="@string/kullanici_ayar" />
 
