--- a/app/src/main/res/layout/fragment_aydinlatma.xml
+++ b/app/src/main/res/layout/fragment_aydinlatma.xml
@@ -45,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="50dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toStartOf="@+id/imageView4"
         app:layout_constraintTop_toBottomOf="@+id/mutfaktavan">
@@ -145,6 +145,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="32dp"
         android:orientation="vertical"
+        app:layout_constraintEnd_toStartOf="@+id/oturmaalaniisik"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mutfakisik">
 
@@ -152,6 +153,7 @@
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:fontFamily="@font/poppinsbold"
             android:gravity="center"
             android:text="@string/oturma_alani_isiklari_m"
@@ -214,6 +216,7 @@
             android:id="@+id/mutfakisiklaritext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:fontFamily="@font/poppinsbold"
             android:gravity="center"
             android:text="@string/mutfak_isiklari"
@@ -257,6 +260,7 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:fontFamily="@font/poppinsbold"
             android:gravity="center"
             android:text="@string/dis_isiklar_sol"
@@ -279,7 +283,7 @@
         android:id="@+id/linearLayout2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="50dp"
         android:layout_marginTop="32dp"
         android:orientation="vertical"
         app:layout_constraintStart_toEndOf="@+id/imageView4"
@@ -289,6 +293,7 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:fontFamily="@font/poppinsbold"
             android:text="@string/dis_isiklari_on"
             android:textColor="@color/white"
@@ -319,6 +324,7 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:fontFamily="@font/poppinsbold"
             android:text="@string/park_isiklari_sag"
             android:textColor="@color/white"
@@ -372,16 +378,19 @@
         android:id="@+id/linearLayout4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="15dp"
+        android:layout_marginEnd="40dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:fontFamily="@font/poppinsbold"
             android:text="@string/dis_isiklar_arka"
             android:textColor="@color/white"
