--- a/app/src/main/res/layout/fragment_gostergeler.xml
+++ b/app/src/main/res/layout/fragment_gostergeler.xml
@@ -227,7 +227,7 @@
         app:layout_constraintStart_toStartOf="@+id/imageView48" />
 
     <TextView
-        android:id="@+id/textView80"
+        android:id="@+id/atıiksugosterge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="108dp"
@@ -236,7 +236,7 @@
         android:textColor="@color/white"
         android:textSize="54sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView50"
-        app:layout_constraintEnd_toStartOf="@+id/textView82"
+        app:layout_constraintEnd_toStartOf="@+id/yuzdelilk"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/imageView50" />
 
@@ -254,7 +254,7 @@
         app:layout_constraintEnd_toEndOf="@+id/imageView48" />
 
     <TextView
-        android:id="@+id/textView82"
+        android:id="@+id/yuzdelilk"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="64dp"
