--- a/app/src/main/res/layout/fragment_enerji.xml
+++ b/app/src/main/res/layout/fragment_enerji.xml
@@ -145,13 +145,15 @@
         android:id="@+id/textView20"
         android:layout_width="wrap_content"
         android:layout_height="24dp"
+        android:layout_marginStart="-24dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="29dp"
+        android:layout_marginEnd="32dp"
         android:fontFamily="@font/poppinsbold"
         android:text="@string/panel_gerilimi"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/textView28"
+        app:layout_constraintStart_toStartOf="@+id/imageView19"
         app:layout_constraintTop_toBottomOf="@+id/imageView19" />
 
     <LinearLayout
@@ -230,7 +232,7 @@
         android:layout_width="0dp"
         android:layout_height="24dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="-15dp"
+        android:layout_marginEnd="-24dp"
         android:fontFamily="@font/poppinsbold"
         android:gravity="center"
         android:text="@string/panelakimi"
